tests/errors/sem_unknown_type.java
public class sem_unknown_type {
    public static void main(String[] args) {
        Thing thing = null;
    }
}
